remove extraneous comma

--- a/example-notebooks/sparklines-svg-computing.ipynb
+++ b/example-notebooks/sparklines-svg-computing.ipynb
@@ -20,7 +20,7 @@
         "from vdom.svg import *\n",
         "from functools import reduce\n",
         "import random\n",
-        "import time",
+        "import time"
       ],
       "outputs": [],
       "execution_count": null,
